k8s1/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-backend-deployment
  labels:
    app: sm-backend
  namespace: sm-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm-backend
  template:
    metadata:
      labels:
        app: sm-backend
    spec:
      imagePullSecrets:
      - name: my-registry-key
      containers:
      - name: sm-backend
        image: registry.gitlab.com/socialmedia725/sm-backend:latest
        ports:
        - containerPort: 8085
---

apiVersion: v1
kind: Service
metadata:
  name: sm-backend-service
  namespace: sm-app
spec:
  selector:
    app: sm-backend
  ports:
  - protocol: TCP
    port: 8085
    targetPort: 8085
